--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,12 @@
-Flask==2.3.3
-aiohttp==3.8.5
-requests==2.31.0
-pycryptodome==3.19.0
-protobuf==4.24.4
-google-play-scraper==1.2.5
-pytz==2023.3
-urllib3==2.0.7
-Jinja2==3.1.2
-Werkzeug==2.3.7
-pyjwt==2.8.0
-psutil==5.9.5
-gunicorn==21.2.0
+aiohttp>=3.9.0
+requests>=2.31.0
+protobuf>=4.25.1
+pycryptodome>=3.20.0
+protobuf-decoder>=0.1.3
+cfonts>=1.5.0
+flask>=3.0.0
+pytz>=2023.3
+google-play-scraper>=1.2.7
+google-auth>=2.23.4
+pyjwt>=2.8.0
+urllib3>=1.26.18
